<resources>
    <string name="app_name">Access Algarve</string>
    <string name="location">Location</string>
    <string name="location_btn">location_btn</string>
    <string name="search_btn">search_btn</string>
    <string name="main_image">TODO</string>
    <string name="what_s_hot">What\'s Hot</string>
    <string name="food_drink_btn">TODO</string>
    <string name="red_bubble">TODO</string>
    <string name="lifestyle">TODO</string>
    <string name="activities">TODO</string>
    <string name="good_morning_txt">Good Morning</string>
    <string name="access_logo">TODO</string>
    <string name="welcome_to_access_algarve">Welcome to Access Algarve</string>
    <string name="homebtn">TODO</string>
    <string name="butbtn">TODO</string>
    <string name="profilebtn">TODO</string>
    <string name="favouritebtn">TODO</string>
    <string name="notificationbtn">TODO</string>
    <string name="what_s_near_me">What\'s Near Me</string>
    <string name="near_me_icon">TODO</string>
    <string name="back_blue_btn">TODO</string>
    <string name="Btn_small_blue_activities">TODO</string>
    <string name="icon_map">TODO</string>
    <string name="sky_image">TODO</string>
    <string name="blue_bar">TODO</string>
    <string name="flag">TODO</string>
    <string name="adress">TODO</string>
    <string name="web">TODO</string>
    <string name="phone">TODO</string>
    <string name="facebook">TODO</string>
    <string name="blue_background">TODO</string>
    <string name="alvor_12km">Alvor-12km</string>
    <string name="skydive_algarve">Skydive Algarve</string>
    <string name="fav">TODO</string>
    <string name="other_locations">Other Locations</string>
    <string name="voucher_box">TODO</string>
    <string name="logo_activitie">TODO</string>
    <string name="next_blue">TODO</string>
    <string name="save_up_to_50">SAVE UP TO 50€</string>
    <string name="alvor_12km_blue">Alvor - 12km</string>
    <string name="more_offers">More offers:</string>
    <string name="grey_line">TODO</string>
    <string name="tandem_skydive">Tandem Skydive</string>
    <string name="_25_discount">25€ Discount</string>
    <string name="lock_">TODO</string>
    <string name="lock">TODO</string>
    <string name="details">Details:</string>
    <string name="skydive_algarve_is_the_newest_addition_to_the_swallow_group_which_also_includes_skydive_hibaldstow_in_the_uk_and_skydive_spain_near_seville">Skydive Algarve is the newest addition to the Swallow Group, which also includes Skydive Hibaldstow in the UK and Skydive Spain near Seville.</string>
    <string name="amenities">Amenities:</string>
    <string name="wifi">TODO</string>
    <string name="phone_">TODO</string>
    <string name="blue_big_screen">TODO</string>
    <string name="white_cross">TODO</string>
    <string name="review_rules_of_use">Review Rules of Use</string>
    <string name="savings_50">Savings: €50</string>
    <string name="seasonal_rating_apply">seasonal rating apply</string>
    <string name="when_dinning">when dinning</string>
    <string name="calendar_blue">TODO</string>
    <string name="valid_to_30_dec_2017_">Valid to 30 Dec 2017</string>
    <string name="redeem_blue_btn">TODO</string>
    <string name="your_pin">your PIN</string>
    <string name="john_please_enter">John please enter</string>
    <string name="box1">TODO</string>
    <string name="box2">TODO</string>
    <string name="box4">TODO</string>
    <string name="box3">TODO</string>
    <string name="blue_pin_line">TODO</string>
    <string name="_tandem_skydive_">Tandem Skydive</string>
    <string name="buy_1_get_1_free">Buy 1 get 1 free</string>
    <string name="valid_to_30_dec_2017">Valid to 30 Dec 2017</string>
    <string name="please_ask_skydive">Please ask Skydive</string>
    <string name="to_enter_their_pin">to enter their PIN</string>
    <string name="smile_blue_background">TODO</string>
    <string name="_blue_smile">TODO</string>
    <string name="white_cross_">TODO</string>
    <string name="blue_background_smile">TODO</string>
    <string name="_white_cross">TODO</string>
    <string name="blue_smile">TODO</string>
    <string name="been_redeemed">been redeemed</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_voucher_has">Your voucher has</string>
    <string name="enjoy">Enjoy!</string>
    <string name="grey_buy_button">TODO</string>
    <string name="offers_are_subject_to_rules_of_use">Offers are subject to Rules Of Use</string>
    <string name="review_rules_of_use_">Review Rules of Use</string>
    <string name="skydive_title">TextView</string>
    <string name="mapview">TextView</string>
    <string name="skydive_logo">TODO</string>
    <string name="tandem_skydive_">Tandem Skydive</string>
    <string name="next">TODO</string>
    <string name="map_view">Map View</string>
    <string name="map_btn">TODO</string>
    <string name="research">TODO</string>
    <string name="logo">TODO</string>
    <string name="hundreds_of_offers_with">Hundreds of offers with</string>
    <string name="save_money_enjoy_living">Save money, enjoy living</string>
    <string name="something_for_everyone">something for everyone</string>
    <string name="text_fiel">TODO</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="log_in_btn">TODO</string>
    <string name="todo">TODO</string>
    <string name="save_money_enjoy_living_">Save money, enjoy living</string>
    <string name="forgot_password_">Forgot password?</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="by_creating_an_account_loging_in_you_agree_to_the_terms_conditions"><![CDATA[By creating an account/loging in you agree to the Terms & Conditions]]></string>
    <string name="white_line">TODO</string>
    <string name="box_password">TODO</string>
    <string name="cross_red">TODO</string>
    <string name="send_btn">TODO</string>
    <string name="_email_">Email:</string>
    <string name="image_password">TODO</string>
    <string name="forgot_password_pop_up">Forgot password</string>
    <string name="please_enter_your_registered_email">Please enter your registered email</string>
    <string name="address_we_will_send_you_a_password">address. We will send you a password</string>
    <string name="reminder">reminder</string>
    <string name="red_circle">TODO</string>
    <string name="outline_circle1">TODO</string>
    <string name="outlide_circle2">TODO</string>
    <string name="welcomw_logo">TODO</string>
    <string name="let_us_show_you_how">Let us show you how...</string>
    <string name="with_400_vouchers">with 400+ vouchers.</string>
    <string name="save_over_5000">Save over 5000€</string>
    <string name="welcome">Welcome</string>
    <string name="show_me">TODO</string>
    <string name="select_a_location">Select a location</string>
    <string name="burgau">Burgau</string>
    <string name="vila_do_bispo">Vila do Bispo</string>
    <string name="sagres">Sagres</string>
    <string name="luz">Luz</string>
    <string name="home_main_image">TODO</string>
    <string name="red_flag_image">TODO</string>
    <string name="lagos">Lagos</string>
    <string name="portim_o">Portimão</string>
    <string name="alvor">Alvor</string>
    <string name="lagoa">Lagoa</string>
    <string name="carvoeiro">Carvoeiro</string>
    <string name="parchal">Parchal</string>
    <string name="albufeira">Albufeira</string>
    <string name="next_btn">TODO</string>
    <string name="money_gif">TODO</string>
    <string name="total_possible_savings">TOTAL POSSIBLE SAVINGS:</string>
    <string name="_50">50€</string>
    <string name="_400_vouchers">400+ Vouchers</string>
    <string name="save_over_5000_with">Save over 5000€ with</string>
    <string name="get_your_2018_subscription">Get your 2018 subscription</string>
    <string name="for_free">TODO</string>
    <string name="subscription">TODO</string>
    <string name="re_circle">TODO</string>
    <string name="empy_circle2">TODO</string>
    <string name="empty_circle">TODO</string>
    <string name="select_at_least_3_vouchers_to">Select at least 3 vouchers to</string>
    <string name="calculate_possible_savings">calculate possible savings</string>
    <string name="_50_">50€</string>
    <string name="total_possible_savings_">TOTAL POSSIBLE SAVINGS:</string>
    <string name="next_3_select">TODO</string>
    <string name="create_your_account_to_start_saving">Create your account to start saving</string>
    <string name="email_">Email:</string>
    <string name="password_">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="name_frist_and_last">Name (Frist and Last):</string>
    <string name="country_of_residence_select">Country of Residence (select)</string>
    <string name="create_btn">TODO</string>
    <string name="or_log_in_with_facebook">or log in with Facebook:</string>
    <string name="btn_log_in_facebook">TODO</string>
    <string name="logo_useer_pin">TODO</string>
    <string name="set_your_user_pin">Set your User PIN</string>
    <string name="this_code_will_be_requested">This code will be requested</string>
    <string name="in_order_to_redeem_vouchers">in order to redeem vouchers</string>
    <string name="pin1">*</string>
    <string name="pin2">*</string>
    <string name="pin3">*</string>
    <string name="pin4">*</string>
    <string name="buy">Buy</string>
    <string name="_2018_19_app_subscription">2018/19 app subscription</string>
    <string name="savings_worth_over_5000">savings worth over 5000€</string>
    <string name="enjoy_over_400_voucher_with">Enjoy over 400+ Voucher with</string>
    <string name="with_vouchers_for_food_drink_actives_and_lifestyle_there_is_something_for_everyone_from_restaurants_and_bars_to_spas_enjoy_everything_the_algarve_has_to_offer_while_you_save_money"><![CDATA[With vouchers for Food & Drink, Actives and Lifestyle there is something for everyone. From restaurants and bars to spas enjoy everything the Algarve has to offer while you save money...]]></string>
    <string name="purchase_btn">TODO</string>
    <string name="textview">TextView</string>
    <string name="total_savings">Total Savings</string>
    <string name="total_savings_243">TOTAL SAVINGS: €243</string>
    <string name="favourites">Favourites</string>
    <string name="save_up_to_50_activities">Save up to €50</string>
    <string name="btn_fav_">TODO</string>
    <string name="cartoon">TODO</string>
    <string name="choose_your_desired_locations_below_or_click_next_to_view_all_locations">Choose your desired locations below or click \'Next’ to view all locations</string>
    <string name="text_cartoon">TODO</string>
    <string name="back">TODO</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="confirm_purchase_image">TODO</string>
    <string name="delete">TODO</string>
    <string name="_2017_app_subscription">2017 app subscription</string>
    <string name="all_vouchers_are_valid_until_30th_dec_2017">All vouchers are valid until 30th Dec 2017</string>
    <string name="grey_line_buy">TODO</string>
    <string name="total">Total:</string>
    <string name="_10">10€</string>
    <string name="do_you_have_a_promo_code">Do you have a promo code?</string>
    <string name="pay_through_paypal_or_credit_card">Pay through Paypal or credit card:</string>
    <string name="confirm_purchase_btn">TODO</string>
    <string name="paypal">TODO</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon">TODO</string>
    <string name="notification_box">TODO</string>
    <string name="zoomarine">TODO</string>
    <string name="free_offer">FREE OFFER</string>
    <string name="btn_redeem_notification">TODO</string>
</resources>