<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/Scroll-view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/location_btn"
                android:elevation="0dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/sinkinsans_500medium"
                android:lineSpacingExtra="10sp"
                android:text="@string/location"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/locationButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

            <ImageButton
                android:id="@+id/searchButton"
                style="@android:style/Widget.Material.ImageButton"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/search_btn"
                android:elevation="0dp"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/Whats_Hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sinkinsans_500medium"
                android:text="@string/what_s_hot"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchButton" />


            <ImageView
                android:id="@+id/main_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_main_image"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:src="@drawable/zoomarine_whats_hot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Whats_Hot" />

            <ImageView
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/red_flag_image"
                android:scaleType="fitXY"
                android:src="@drawable/home_bubble"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/access_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_image"
                app:layout_constraintVertical_bias="0.64" />

            <TextView
                android:id="@+id/Good_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/jennasue"
                android:text="@string/good_morning_txt"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="54sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/flag"
                app:layout_constraintStart_toStartOf="@+id/flag"
                app:layout_constraintTop_toTopOf="@+id/flag" />

            <TextView
                android:id="@+id/Welcome_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/sinkinsans_500medium"
                android:text="@string/welcome_to_access_algarve"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/flag"
                app:layout_constraintStart_toStartOf="@+id/flag"
                app:layout_constraintTop_toBottomOf="@+id/Good_morning" />


            <ImageView
                android:id="@+id/access_logo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/access_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_image"
                app:srcCompat="@drawable/home_access_logo" />

            <ImageButton
                android:id="@+id/food_drinks"
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/food_drink_btn"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/access_logo"
                app:srcCompat="@drawable/food_drink_button" />

            <ImageButton
                android:id="@+id/activities"
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/activities"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/lifestyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_drinks"
                app:srcCompat="@drawable/activities_button" />

            <ImageButton
                android:id="@+id/lifestyle"
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/lifestyle"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activities"
                app:srcCompat="@drawable/lifestyle_button" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lifestyle">

                <ImageView
                    android:id="@+id/near_me_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/near_me_icon"
                    app:layout_constraintEnd_toStartOf="@+id/near_me"
                    app:srcCompat="@drawable/ic_near_me" />

                <TextView
                    android:id="@+id/near_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/sinkinsans_500medium"
                    android:text="@string/what_s_near_me"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>


    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_btn"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottom_colour"
                android:contentDescription="@string/homebtn"
                app:srcCompat="@drawable/ic_home_black_24dp" />

            <ImageButton
                android:id="@+id/notification_btn"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottom_colour"
                android:contentDescription="@string/notificationbtn"
                app:srcCompat="@drawable/ic_notifications_gray_24dp" />

            <ImageButton
                android:id="@+id/fav_btn"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottom_colour"
                android:contentDescription="@string/favouritebtn"
                app:srcCompat="@drawable/ic_favourite_gray_24dp" />

            <ImageButton
                android:id="@+id/profile_btn"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottom_colour"
                android:contentDescription="@string/profilebtn"
                app:srcCompat="@drawable/ic_account_gray_24dp" />

            <ImageButton
                android:id="@+id/buy_btn"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bottom_colour"
                android:contentDescription="@string/butbtn"
                app:srcCompat="@drawable/ic_cart_gray_24dp" />
        </LinearLayout>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
